Zoom View hotkey: Zoom Position Y doesn't working #41642

Closed
opened 2014-08-30 11:10:11 +02:00 by Constantine Tarasenkov · 8 comments

Basically I want to zoom with up and down movements of the mouse, but it seems Zoom Position Y parameter of view3d.zoom hotkey act like Zoom Position X, see this video: http://www.youtube.com/embed/cyww9ZSQV88?hd=1

Blender 2.71 downloaded from the website.

Basically I want to zoom with up and down movements of the mouse, but it seems Zoom Position Y parameter of view3d.zoom hotkey act like Zoom Position X, see this video: http://www.youtube.com/embed/cyww9ZSQV88?hd=1 Blender 2.71 downloaded from the website.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Constantine-4

Added subscriber: @Constantine-4

Ok, it works in Blender style navigation, but it's broken on Maya preset

Ok, it works in Blender style navigation, but it's broken on Maya preset
Bastien Montagne self-assigned this 2014-08-30 16:33:15 +02:00

Those settings should not be visible in UI, will fix that. They are for internal (operator mostly) use only, and have no effect when set from shortcuts anyway.

Those settings should not be visible in UI, will fix that. They are for internal (operator mostly) use only, and have no effect when set from shortcuts anyway.

This issue was referenced by 16791fbecf

This issue was referenced by 16791fbecf2245a2eb7cfb73a24c9a98c1cdf216

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 16791fbecf.

Closed by commit 16791fbecf.

Ok, got it, silly me, there's an option for what I want in Zoom Style category :) Yeah, these parameters don't do anything, thanks for fix!

Ok, got it, silly me, there's an option for what I want in Zoom Style category :) Yeah, these parameters don't do anything, thanks for fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41642
No description provided.