Fix T41642: Zoom View hotkey: Zoom Position Y doesn't working

Hide zoom settings that have no use in UI/shortcuts definitions.